[gd_scene load_steps=8 format=3 uid="uid://bicqk55ccy7if"]

[ext_resource type="Script" path="res://Scripts/vault_content.gd" id="1_vbtk0"]
[ext_resource type="Script" path="res://Scripts/vault_item_control.gd" id="2_ro1i8"]
[ext_resource type="Texture2D" uid="uid://81ulx1yy5kmt" path="res://Arts/vault_content_1.png" id="3_ttucq"]
[ext_resource type="Script" path="res://Scripts/hover_rect.gd" id="4_6rn20"]
[ext_resource type="Script" path="res://Scripts/exit_icon.gd" id="5_fhpj4"]
[ext_resource type="FontFile" uid="uid://cthro4rqrdyu0" path="res://Fonts/press-start-2p-font/PressStart2P-vaV7.ttf" id="6_tc1wu"]
[ext_resource type="Script" path="res://Scripts/vault_zoom_in.gd" id="7_grj7a"]

[node name="VaultContent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vbtk0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0705882, 0.0980392, 1)

[node name="IconContainer" type="Node2D" parent="."]

[node name="DocControl" type="Control" parent="IconContainer"]
layout_mode = 3
anchors_preset = 0
offset_left = 82.0
offset_top = 43.0
offset_right = 238.0
offset_bottom = 239.0
script = ExtResource("2_ro1i8")

[node name="Icon" type="TextureRect" parent="IconContainer/DocControl"]
layout_mode = 0
offset_right = 58.0
offset_bottom = 64.0
scale = Vector2(2.7875, 3.1)
texture = ExtResource("3_ttucq")
stretch_mode = 5

[node name="HoverRect" type="ColorRect" parent="IconContainer/DocControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 7.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("4_6rn20")

[node name="BlockRect" type="ColorRect" parent="IconContainer/DocControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.662745)

[node name="PhotoBookControl" type="Control" parent="IconContainer"]
layout_mode = 3
anchors_preset = 0
offset_left = 608.0
offset_top = 45.0
offset_right = 764.0
offset_bottom = 241.0
script = ExtResource("2_ro1i8")
metadata/_edit_group_ = true

[node name="Icon" type="TextureRect" parent="IconContainer/PhotoBookControl"]
layout_mode = 0
offset_right = 58.0
offset_bottom = 64.0
scale = Vector2(2.7875, 3.1)
texture = ExtResource("3_ttucq")
stretch_mode = 5

[node name="HoverRect" type="ColorRect" parent="IconContainer/PhotoBookControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 7.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("4_6rn20")

[node name="BlockRect" type="ColorRect" parent="IconContainer/PhotoBookControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.662745)

[node name="ExitIcon" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 899.0
offset_top = 18.0
offset_right = 949.0
offset_bottom = 67.0
script = ExtResource("5_fhpj4")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="ExitIcon"]
layout_mode = 0
offset_right = 54.0
offset_bottom = 54.0
theme_override_fonts/font = ExtResource("6_tc1wu")
theme_override_font_sizes/font_size = 54
text = "X"

[node name="ZoomIn" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1017.0
offset_top = 72.0
offset_right = 1017.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_grj7a")
metadata/_edit_group_ = true

[node name="Shade" type="ColorRect" parent="ZoomIn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 52.0
offset_top = 273.0
offset_right = -54.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.580392, 0.823529, 0.741176, 0.843137)

[node name="NoteText" type="RichTextLabel" parent="ZoomIn"]
layout_mode = 0
offset_left = 118.0
offset_top = 318.0
offset_right = 837.0
offset_bottom = 468.0
mouse_filter = 2
theme_override_constants/line_separation = 10
theme_override_fonts/normal_font = ExtResource("6_tc1wu")
theme_override_font_sizes/normal_font_size = 24
text = "Elysia's medical records, insurance files, and legal documents. She kept everything organized for me."

[node name="TransparentShield" type="ColorRect" parent="ZoomIn"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.588235)
